# Chip8

./: .gitignore  CMakeLists.txt  main.cpp
.github/workflows/: build.yml
Core/: Chip8.cpp  Chip8.h
